# Robert

./: README.md  db_checker.py  dotfiles.json  generate_database.py  pyproject.toml  requirements.txt  search.sh
.github/workflows/: update.yml
json/: crossref.json
scripts/: crossref.py  test.py
