[tool.poetry]
name = "generate_database"
version = "0.1.0"
description = ""
authors = ["vsedov <viv.sedov@hotmail.com>"]

[tool.yapf]
align_closing_bracket_with_visual_indent = "False"
allow_multiline_dictionary_keys = "True"
allow_multiline_lambdas = "False"
allow_split_before_default_or_named_assigns="False"
allow_split_before_dict_value="False"
arithmetic_precedence_indication="True"
blank_lines_around_top_level_definition="1"
blank_lines_between_top_level_imports_and_variables="1"
blank_line_before_class_docstring="False"
blank_line_before_module_docstring="False"
blank_line_before_nested_class_or_def="True"
coalesce_brackets="True"
column_limit="80"
continuation_align_style="SPACE"
continuation_indent_width="4"
dedent_closing_brackets="False"
disable_ending_comma_heuristic="True"
each_dict_entry_on_separate_line="True"
force_multiline_dict="True"
i18n_comment="#\\..*"
i18n_function_call="N_, _"
indent_closing_brackets="False"
indent_dictionary_value="True"
indent_width="4"
join_multiple_lines="True"
no_spaces_around_selected_binary_operators="False"
spaces_around_default_or_named_assign="False"
spaces_around_dict_delimiters="False"
spaces_around_list_delimiters="False"
spaces_around_power_operator="False"
spaces_around_subscript_colon="False"
spaces_around_tuple_delimiters="False"
spaces_before_comment="2"
space_between_ending_comma_and_closing_bracket="False"
space_inside_brackets="False"
split_all_comma_separated_values="False"
split_arguments_when_comma_terminated="True"
split_before_bitwise_operator="True"
split_before_closing_bracket="True"
split_before_dict_set_generator="True"
split_before_dot="True"
split_before_expression_after_opening_paren="True"
split_before_first_argument="True"
split_before_logical_operator="True"
split_before_named_assigns="True"
split_complex_comprehension="True"
split_penalty_after_opening_bracket="300"
split_penalty_after_unary_operator="10000"
split_penalty_arithmetic_operator="300"
split_penalty_before_if_expr="0"
split_penalty_bitwise_operator="300"
split_penalty_comprehension="2100"
split_penalty_excess_character="7000"
split_penalty_for_added_line_split="30"
split_penalty_import_names="0"
split_penalty_logical_operator="300"
use_tabs="False"

[tool.poetry.dependencies]
python=  "3.12.8"
zipp = "3.17.0"
asttokens = "2.0.5"
certifi = "2021.10.8"
charset-normalizer = "2.0.12"
colorama = "0.4.4"
commonmark = "0.9.1"
debugpy = "1.8.1"
executing = "0.8.3"
icecream = "2.1.2"
idna = "3.3"
importlib-metadata = "7.0.2"
joblib = "1.1.0"
numpy = "1.26.4"
pandas = "2.2.1"
platformdirs = "4.2.0"
pydantic = "1.9.0"
pygments = "2.11.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "0.19.2"
pytz = "2024.1"
requests = "2.27.1"
rich = "11.2.0"
six = "1.16.0"
tabulate = "0.9.0"
tomli = "2.0.1"
tqdm = "4.63.0"
typing-extensions = "4.1.1"
tzdata = "2024.1"
urllib3 = "1.26.8"
yapf = "0.40.2"
setuptools = "^78.1.1"



